sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '<-' expected but ')' found.
  for(i -> 0 to nbval){
                     ^AlgBubbleSort1:11: error: illegal start of simple expression
}
^